fix: preven vertical scrollbar in desktop view

--- a/www/src/components/containers/country/components/moreOptions/moreOptions.module.css
+++ b/www/src/components/containers/country/components/moreOptions/moreOptions.module.css
@@ -1,18 +1,19 @@
-.options{
-    display: flex;
-    height: 3.75rem;
-    margin: 0 0 2.5rem 0;
-    padding: .625rem 0 .625rem 1.25rem;
-    background-color: #f5f4f5;
-    overflow: scroll;
+.options {
+  display: flex;
+  height: 4rem;
+  margin: 0 0 2.5rem 0;
+  padding: 0.625rem 0 0.625rem 1.25rem;
+  background-color: #f5f4f5;
+  overflow-y: hidden;
+  overflow-x: scroll;
 }
 
-.buttonStyle{
-    height: 2.5rem;
-    margin: 0 1rem 0 0;
-    padding: .5rem 1.25rem .675rem 1.25rem;
-    border-radius: 1rem;
-    background-color: #ffffff;
-    min-width: max-content;
-    text-align: center;
+.buttonStyle {
+  height: 2.5rem;
+  margin: 0 1rem 0 0;
+  padding: 0.5rem 1.25rem 0.675rem 1.25rem;
+  border-radius: 1rem;
+  background-color: #ffffff;
+  min-width: max-content;
+  text-align: center;
 }
